CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
LIST(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

PROJECT(CudaAssertionFailTest)

ADD_DEFINITIONS(-DPROJECT_PATH="${PROJECT_SOURCE_DIR}")

FIND_PACKAGE(OpenCV REQUIRED
  NO_MODULE
  COMPONENTS
    opencv_core
    opencv_cudaarithm
    opencv_hal
    opencv_xfeatures2d
)

INCLUDE_DIRECTORIES(
  ${OpenCV_INCLUDE_DIRS}
)

ADD_EXECUTABLE(TestJig
  CudaAssertionFailTest.cpp
)

set(CUDAASSERTIONFAILTEST_CXX_FLAGS
  -std=c++11
  -Werror
  -fexceptions
)

target_compile_options(TestJig
  PRIVATE
  ${CUDAASSERTIONFAILTEST_CXX_FLAGS}
)

TARGET_LINK_LIBRARIES(TestJig
  ${OpenCV_LIBS}
)
